Duke Java Courses/DukeCourse1-Solving Problems with Software/Permeter Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/Resources/Java/userlib/courserajava.jar:/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/Resources/Java/userlib/apache-csv.jar:/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/private/var/folders/1p/2s57l4hx0nv5y3qzfc80dpwh6rb4my/T/AppTranslocation/7715F1C6-D83B-40BD-B560-AB13C4CEC844/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/k23kochan/Desktop/perimeter_quiz
-d
/Users/k23kochan/Desktop/perimeter_quiz/doc
-encoding
UTF-8
-charset
UTF-8
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java
<---- end of javadoc command ---->
Loading source file /Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java...
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:50: error: illegal start of expression
    public double getLargestX(Shape s) {
    ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:50: error: ';' expected
    public double getLargestX(Shape s) {
                             ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:50: error: ';' expected
    public double getLargestX(Shape s) {
                                     ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:59: error: illegal start of expression
    public double getLargestPerimeterMultipleFiles() {
    ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:59: error: ';' expected
    public double getLargestPerimeterMultipleFiles() {
                                                  ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:72: error: illegal start of expression
    public String getFileWithLargestPerimeter() {
    ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:72: error: ';' expected
    public String getFileWithLargestPerimeter() {
                                             ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:78: error: illegal start of expression
    public void testPerimeter () {
    ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:78: error: illegal start of expression
    public void testPerimeter () {
           ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:78: error: ';' expected
    public void testPerimeter () {
                             ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:89: error: illegal start of expression
    public void testPerimeterMultipleFiles() {
    ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:89: error: illegal start of expression
    public void testPerimeterMultipleFiles() {
           ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:89: error: ';' expected
    public void testPerimeterMultipleFiles() {
                                          ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:94: error: illegal start of expression
    public void testFileWithLargestPerimeter() {
    ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:94: error: illegal start of expression
    public void testFileWithLargestPerimeter() {
           ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:94: error: ';' expected
    public void testFileWithLargestPerimeter() {
                                            ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:99: error: illegal start of expression
    public void triangle(){
    ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:99: error: illegal start of expression
    public void triangle(){
           ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:99: error: ';' expected
    public void triangle(){
                        ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:112: error: illegal start of expression
    public void printFileNames() {
    ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:112: error: illegal start of expression
    public void printFileNames() {
           ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:112: error: ';' expected
    public void printFileNames() {
                              ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:119: error: illegal start of expression
    public static void main (String[] args) {
    ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:119: error: illegal start of expression
    public static void main (String[] args) {
           ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:119: error: ';' expected
    public static void main (String[] args) {
                 ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:119: error: '.class' expected
    public static void main (String[] args) {
                                      ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:119: error: ';' expected
    public static void main (String[] args) {
                                          ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:123: error: reached end of file while parsing
}
 ^
/Users/k23kochan/Desktop/perimeter_quiz/PerimeterAssignmentRunner.java:124: error: reached end of file while parsing
29 errors
